--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -1,1 +1,30 @@
-<p>top-nav-bar.component.html</p>
+
+<nav class="navbar bg-dark">
+    <ul class="nav">
+        <li class="nav-item">
+          <a href = "#" class="nav-link text-white">
+              STEAM
+          </a>
+        </li>
+        <li class="nav-item">
+           <a href = "#" class="nav-link text-white">
+              STORE
+          </a>
+        </li>
+        <li class="nav-item">
+            <a href = "#" class="nav-link text-white">
+                COMMUNITY
+            </a>
+      </li>
+        <li class="nav-item" >
+            <a href = "#" class="nav-link text-white">
+                ABOUT
+            </a>
+        </li>
+        <li class="nav-item">
+           <a href = "#" class="nav-link text-white">
+               SUPPORT
+           </a>
+      </li>
+    </ul>
+</nav>
