--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -1,11 +1,11 @@
 
 <nav class="navbar bg-dark">
+    <div>
+        <a class="navbar-brand" href="#" class="container">
+            <img src ="https://store.akamai.steamstatic.com/public/shared/images/header/logo_steam.svg?t=962016" alt="" width="180" height="50" class="d-inline-block align-text-top">
+        </a>
+    </div>
     <ul class="nav">
-        <li class="nav-item">
-          <a href = "#" class="nav-link text-white">
-              STEAM
-          </a>
-        </li>
         <li class="nav-item">
            <a href = "#" class="nav-link text-white">
               STORE
@@ -26,5 +26,15 @@
                SUPPORT
            </a>
       </li>
+    </ul>
+
+    <ul class="dropwdown-menu">
+        <li class="nav-item">
+            <a class="nav-link dropdown-toggle"
+
+            </a>
+        </li>>
+
+        </li>
     </ul>
 </nav>
