--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar bg-dark">
+<nav class="navbar bg-dark" stlye="height: 300px">
     <div>
         <a class="navbar-brand" href="#" class="container">
             <img src ="https://store.akamai.steamstatic.com/public/shared/images/header/logo_steam.svg?t=962016" alt="" width="180" height="50" class="d-inline-block align-text-top">
@@ -28,13 +28,32 @@
       </li>
     </ul>
 
-    <ul class="dropwdown-menu">
+    <ul class="nav nav-pills">
         <li class="nav-item">
-            <a class="nav-link dropdown-toggle"
-
+            <a href="#" class="nav-link text-white">
+                login
             </a>
-        </li>>
-
         </li>
+        
+        &nbsp;|&nbsp;
+						
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white"> 
+                language
+            </a>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Italiano(Italian)</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Nederlands(Dutch)</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">日本語 (Japanese)</a>
+                </li>
+            </ul>
+        </li>
+        
     </ul>
+
 </nav>
