--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -1,10 +1,16 @@
 
-<nav class="navbar bg-dark" stlye="height: 300px">
+<nav class="navbar bg-dark" >
+    <table style="height:150px; margin-left:auto;margin-right:auto" >
+    <tbody>
+    <tr>
+    <td class="align-middle" >
     <div>
-        <a class="navbar-brand" href="#" class="container">
+        <a class="navbar-brand" href="#" >
             <img src ="https://store.akamai.steamstatic.com/public/shared/images/header/logo_steam.svg?t=962016" alt="" width="180" height="50" class="d-inline-block align-text-top">
         </a>
     </div>
+    </td>
+    <td class="align-middle" >
     <ul class="nav">
         <li class="nav-item">
            <a href = "#" class="nav-link text-white">
@@ -27,20 +33,28 @@
            </a>
       </li>
     </ul>
-
-    <ul class="nav nav-pills">
+    </td>
+    
+    <ul class="nav nav-pills" >
+        <td class="align-text-top">
+        <button type="button" class="btn btn-success"> Install Steam</button>
+        </td>
+        <td class="align-text-top">
         <li class="nav-item">
             <a href="#" class="nav-link text-white">
                 login
             </a>
-        </li>
+        </li>	
+        </td>
+        <div class="align-text-top">" &nbsp;|&nbsp; "</div> 
         
-        &nbsp;|&nbsp;
-						
+        
+        <td class="align-text-top">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white"> 
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
                 language
             </a>
+        
             <ul class="dropdown-menu">
                 <li>
                     <a class="dropdown-item" href="#" class="nav-link text-black">Italiano(Italian)</a>
@@ -53,7 +67,10 @@
                 </li>
             </ul>
         </li>
-        
+        </td>
     </ul>
-
+    
+    </tr>
+    </tbody>
+    </table>
 </nav>
