--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -46,7 +46,7 @@
             </a>
         </li>	
         </td>
-        <div class="align-text-top">" &nbsp;|&nbsp; "</div> 
+        <div class="align-text-top">"&nbsp;|"</div> 
         
         
         <td class="align-text-top">
@@ -69,6 +69,108 @@
         </li>
         </td>
     </ul>
+    
+    </tr>
+    </tbody>
+    </table>
+</nav>
+
+    
+    
+<nav class="navbar navbar-light" style="background-color: #266fcfbb">
+ <table style="height:5px; margin-left:auto;margin-right:auto" >
+ <tbody>
+    <tr>
+        <td class="align-middle" >
+        <ul class="nav">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
+                    Your Store
+                </a>
+            
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Community Recommendations</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Recently Viewed</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Steam Curators</a>
+                    </li>
+                </ul>
+            </li>
+            
+            
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
+                    New & Noteworthy
+                </a>
+            
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Top Sellers</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">New and Trending</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Current Specials</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Recently Updated</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Popular Upcoming</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
+                   Categories
+                </a>
+            
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Special Sections</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Genres</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Themes</a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#" class="nav-link text-black">Player Support</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item">
+               <a href = "#" class="nav-link text-white">
+                   Points Shop
+               </a>
+          </li>
+            <li class="nav-item">
+                <a href = "#" class="nav-link text-white">
+                   News
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href = "#" class="nav-link text-white">
+                    Labs
+                </a>
+           </li>
+        </ul>
+        </td>
+     <nav class="navbar navbar-light" style="background-color: #266fcfbb">
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </nav>
     
     </tr>
     </tbody>
