--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar bg-dark" >
-    <table style="height:150px; margin-left:auto;margin-right:auto" >
+    <table style="height:125px; margin-left:auto;margin-right:auto" >
     <tbody>
     <tr>
     <td class="align-middle" >
@@ -12,16 +12,55 @@
     </td>
     <td class="align-middle" >
     <ul class="nav">
-        <li class="nav-item">
-           <a href = "#" class="nav-link text-white">
-              STORE
-          </a>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
+                STORE
+            </a>
+        
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Discovery Queue</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Wishlist</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Points Shop</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">News</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Stats</a>
+                </li>
+            </ul>
         </li>
-        <li class="nav-item">
-            <a href = "#" class="nav-link text-white">
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
                 COMMUNITY
             </a>
-      </li>
+        
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Discussions</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Workshop</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Market</a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#" class="nav-link text-black">Broadcasts</a>
+                </li>
+            </ul>
+        </li>
         <li class="nav-item" >
             <a href = "#" class="nav-link text-white">
                 ABOUT
