added home page

--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -81,11 +81,14 @@
         <td class="align-text-top">
         <li class="nav-item">
             <a href="#" class="nav-link text-white">
-                login
+                login 
             </a>
         </li>	
+        <ul class="align-center">
+            |
+        </ul>
         </td>
-        <div class="align-text-top">"&nbsp;|"</div> 
+        
         
         
         <td class="align-text-top">
@@ -114,15 +117,12 @@
     </table>
 </nav>
 
+
     
-    
-<nav class="navbar navbar-light" style="background-color: #266fcfbb">
- <table style="height:5px; margin-left:auto;margin-right:auto" >
- <tbody>
-    <tr>
-        <td class="align-middle" >
-        <ul class="nav">
-            <li class="nav-item dropdown">
+<nav class="navbar navbar-light" style="background-color: #266fcfbb" >
+ 
+        <ul class="nav" > 
+            <li class="nav-item dropdown"class="align-middle">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
                     Your Store
                 </a>
@@ -202,16 +202,8 @@
                     Labs
                 </a>
            </li>
+           <div class="topnav">
+            <input type="text" placeholder="Search..">
+          </div>
         </ul>
-        </td>
-     <nav class="navbar navbar-light" style="background-color: #266fcfbb">
-        <form class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </nav>
-    
-    </tr>
-    </tbody>
-    </table>
 </nav>
