layout design and css components for each component implemented

--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -17,7 +17,7 @@
                 STORE
             </a>
         
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" style="background-color: #1c1e20" >
                 <li>
                     <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
                 </li>
@@ -43,7 +43,7 @@
                 COMMUNITY
             </a>
         
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" style="background-color: #141618" >
                 <li>
                     <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
                 </li>
@@ -97,7 +97,7 @@
                 language
             </a>
         
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" style="background-color: #1c1e20" >
                 <li>
                     <a class="dropdown-item" href="#" class="nav-link text-black">Italiano(Italian)</a>
                 </li>
@@ -119,17 +119,17 @@
 
 
     
-<nav class="navbar navbar-light" style="background-color: #266fcfbb" >
+<nav class="navbar navbar-dark" style="background-color: #1c6bc5bb" >
  
-        <ul class="nav" > 
+        <ul class="nav" style="color:whitesmoke"> 
             <li class="nav-item dropdown"class="align-middle">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
                     Your Store
                 </a>
             
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="background-color: #565c63">
                     <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
+                        <a class="dropdown-item" href="#" class="nav-link text-black" >Home</a>
                     </li>
                     <li>
                         <a class="dropdown-item" href="#" class="nav-link text-black">Community Recommendations</a>
@@ -149,7 +149,7 @@
                     New & Noteworthy
                 </a>
             
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="background-color: #565c63">
                     <li>
                         <a class="dropdown-item" href="#" class="nav-link text-black">Top Sellers</a>
                     </li>
@@ -172,7 +172,7 @@
                    Categories
                 </a>
             
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="background-color: #565c63">
                     <li>
                         <a class="dropdown-item" href="#" class="nav-link text-black">Special Sections</a>
                     </li>
