--- a/src/app/headers/top-nav-bar.component.css
+++ b/src/app/headers/top-nav-bar.component.css
@@ -1,7 +1,7 @@
 /* Add a black background color to the top navigation bar */
     .topnav {
       overflow: hidden;
-      background-color: #e9e9e9;
+      background-color: #853838;
     }
     
     /* Style the links inside the navigation bar */
@@ -51,6 +51,7 @@
         border: 1px solid #ccc;
       }
     }
+    
 
     
    
