--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
+<app-layout>Loading</app-layout>
 
-<app-top-nav-bar>Loading</app-top-nav-bar>
-<app-foot>Loading</app-foot>
-<app-carousels>Loading</app-carousels>
 
 
