gutter added, layout design with bootstrap flex, footer removed

--- a/src/app/footers/foot.component.css
+++ b/src/app/footers/foot.component.css
@@ -31,5 +31,13 @@
       background-color: transparent;
       text-decoration: none;
     }
+    body{
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+  }
+  article {
+      margin: auto 0;
+  }
     
 
