--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -17,7 +17,7 @@
                 STORE
             </a>
         
-            <ul class="dropdown-menu" style="background-color: #1c1e20" >
+            <ul class="dropdown-menu" style="background-color: #141618" >
                 <li>
                     <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
                 </li>
@@ -97,7 +97,7 @@
                 language
             </a>
         
-            <ul class="dropdown-menu" style="background-color: #1c1e20" >
+            <ul class="dropdown-menu" style="background-color: #141618" >
                 <li>
                     <a class="dropdown-item" href="#" class="nav-link text-black">Italiano(Italian)</a>
                 </li>
@@ -119,91 +119,3 @@
 
 
     
-<nav class="navbar navbar-dark" style="background-color: #1c6bc5bb" >
- 
-        <ul class="nav" style="color:whitesmoke"> 
-            <li class="nav-item dropdown"class="align-middle">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
-                    Your Store
-                </a>
-            
-                <ul class="dropdown-menu" style="background-color: #565c63">
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black" >Home</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Community Recommendations</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Recently Viewed</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Steam Curators</a>
-                    </li>
-                </ul>
-            </li>
-            
-            
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
-                    New & Noteworthy
-                </a>
-            
-                <ul class="dropdown-menu" style="background-color: #565c63">
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Top Sellers</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">New and Trending</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Current Specials</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Recently Updated</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Popular Upcoming</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
-                   Categories
-                </a>
-            
-                <ul class="dropdown-menu" style="background-color: #565c63">
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Special Sections</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Genres</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Themes</a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#" class="nav-link text-black">Player Support</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-item">
-               <a href = "#" class="nav-link text-white">
-                   Points Shop
-               </a>
-          </li>
-            <li class="nav-item">
-                <a href = "#" class="nav-link text-white">
-                   News
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href = "#" class="nav-link text-white">
-                    Labs
-                </a>
-           </li>
-           <div class="topnav">
-            <input type="text" placeholder="Search..">
-          </div>
-        </ul>
-</nav>
