--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,15 @@
-<app-top-nav-bar>Loading</app-top-nav-bar>
-<app-foot>Loading</app-foot>
-<app-carousels>Loading</app-carousels>
+
+<div class="containter-fluid ps-0">
+    <div class="row row-cols-1">
+        <app-top-nav-bar>Loading</app-top-nav-bar>
+    </div>
+    <div class="flex-row">
+        <div class="col ps-5">
+            <app-gutter>Loading</app-gutter>
+        </div>
+        <div class="col pe-10">
+           <app-search-nav>Loading</app-search-nav>
+           <app-body>Loading</app-body>
+     </div>
+    </div>  
+</div>
