Removed table from navbar, moved search nav into body

--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -1,40 +1,36 @@
 
-<nav class="navbar bg-dark" >
-    <table style="height:125px; margin-left:auto;margin-right:auto" >
-    <tbody>
-    <tr>
-    <td class="align-middle" >
-    <div>
+<nav class="navbar bg-dark">
+    
+    <div class="d-md-flex d-block flex-row mx-md-auto mx-5">
         <a class="navbar-brand" href="#" >
             <img src ="https://store.akamai.steamstatic.com/public/shared/images/header/logo_steam.svg?t=962016" alt="" width="180" height="50" class="d-inline-block align-text-top">
         </a>
-    </div>
-    </td>
-    <td class="align-middle" >
+    
+    
+    
     <ul class="nav">
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
                 STORE
             </a>
-        
             <ul class="dropdown-menu" style="background-color: #141618" >
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Home</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Discovery Queue</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Discovery Queue</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Wishlist</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Wishlist</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Points Shop</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Points Shop</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">News</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">News</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Stats</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Stats</a>
                 </li>
             </ul>
         </li>
@@ -45,19 +41,19 @@
         
             <ul class="dropdown-menu" style="background-color: #141618" >
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Home</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Home</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Discussions</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Discussions</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Workshop</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Workshop</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Market</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Market</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Broadcasts</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Broadcasts</a>
                 </li>
             </ul>
         </li>
@@ -70,15 +66,16 @@
            <a href = "#" class="nav-link text-white">
                SUPPORT
            </a>
-      </li>
+        </li>
     </ul>
-    </td>
+    </div>
     
+    
+    <div>
     <ul class="nav nav-pills" >
-        <td class="align-text-top">
+        
         <button type="button" class="btn btn-success"> Install Steam</button>
-        </td>
-        <td class="align-text-top">
+        
         <li class="nav-item">
             <a href="#" class="nav-link text-white">
                 login 
@@ -87,11 +84,6 @@
         <ul class="align-center">
             |
         </ul>
-        </td>
-        
-        
-        
-        <td class="align-text-top">
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
                 language
@@ -99,22 +91,20 @@
         
             <ul class="dropdown-menu" style="background-color: #141618" >
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Italiano(Italian)</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Italiano(Italian)</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Nederlands(Dutch)</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Nederlands(Dutch)</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">日本語 (Japanese)</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">日本語 (Japanese)</a>
                 </li>
             </ul>
         </li>
-        </td>
+        
     </ul>
-    
-    </tr>
-    </tbody>
-    </table>
+    </div>
+  
 </nav>
 
 
