--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -3,14 +3,13 @@
     <div class="row row-cols-1">
         <app-top-nav-bar>Loading</app-top-nav-bar>
     </div>
-    <div class="row ps-5">
-        <div class="row ps-5">
-            <app-body>Loading</app-body>
-        </div>
-        <div class="col ps-5">
-            <app-gutter>Loading</app-gutter>
-        </div>
-       
-    </div>  
-
+    <div class="row row-cols-3 ms-5">
+        <app-gutter>Loading</app-gutter>
+        <app-body>Loading</app-body>
+    </div>
+     
 </div>
+
+
+    
+  
