--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -1,13 +1,14 @@
 
 <nav class="navbar bg-dark">
     
-    <div class="d-md-flex d-block flex-row mx-md-auto mx-5">
+    <div class="center-block">
         <a class="navbar-brand" href="#" >
             <img src ="https://store.akamai.steamstatic.com/public/shared/images/header/logo_steam.svg?t=962016" alt="" width="180" height="50" class="d-inline-block align-text-top">
         </a>
     
     
-    
+    </div>
+    <div class="center-block">
     <ul class="nav">
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
@@ -71,19 +72,17 @@
     </div>
     
     
+    
     <div>
     <ul class="nav nav-pills" >
         
         <button type="button" class="btn btn-success"> Install Steam</button>
         
-        <li class="nav-item">
+        <li class="nav-item" style="vertical-align: top">
             <a href="#" class="nav-link text-white">
                 login 
             </a>
         </li>	
-        <ul class="align-center">
-            |
-        </ul>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
                 language
