--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -7,7 +7,7 @@
         <app-gutter>Loading</app-gutter>
         <app-body>Loading</app-body>
     </div>
-     
+    <app-foot>Loading</app-foot>
 </div>
 
 
