--- a/src/app/searchnav/search-nav.component.html
+++ b/src/app/searchnav/search-nav.component.html
@@ -7,16 +7,16 @@
         
             <ul class="dropdown-menu" style="background-color: #565c63">
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black" >Home</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white" >Home</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Community Recommendations</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Community Recommendations</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Recently Viewed</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Recently Viewed</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Steam Curators</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Steam Curators</a>
                 </li>
             </ul>
         </li>
@@ -27,19 +27,19 @@
         
             <ul class="dropdown-menu" style="background-color: #565c63">
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Top Sellers</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Top Sellers</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">New and Trending</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">New and Trending</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Current Specials</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Current Specials</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Recently Updated</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Recently Updated</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Popular Upcoming</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Popular Upcoming</a>
                 </li>
             </ul>
         </li>
@@ -50,16 +50,16 @@
         
             <ul class="dropdown-menu" style="background-color: #565c63">
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Special Sections</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Special Sections</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Genres</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Genres</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Themes</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Themes</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" href="#" class="nav-link text-black">Player Support</a>
+                    <a class="dropdown-item" href="#" class="nav-link text-white">Player Support</a>
                 </li>
             </ul>
         </li>
