--- a/src/app/headers/top-nav-bar.component.css
+++ b/src/app/headers/top-nav-bar.component.css
@@ -51,7 +51,14 @@
         border: 1px solid #ccc;
       }
     }
-    
+    .navbar.center .navbar-inner {
+      text-align: center;
+  }
+  
+  .navbar.center .navbar-inner .nav {
+      display:inline-block;
+      float: none;
+  }
 
     
    
