--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -36,7 +36,7 @@
             </ul>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1">  
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button" aria-expanded="false" class="nav-link text-white" id="dropdownMenuButton1"  rounterLinkActive="active" routerLink="/steam-community">  
                 COMMUNITY
             </a>
         
@@ -59,12 +59,12 @@
             </ul>
         </li>
         <li class="nav-item" >
-            <a href = "#" class="nav-link text-white">
+            <a class="nav-link text-white" rounterLinkActive="active" routerLink="/steam-about">
                 ABOUT
             </a>
         </li>
         <li class="nav-item">
-           <a href = "#" class="nav-link text-white">
+           <a class="nav-link text-white" rounterLinkActive="active" routerLink="/steam-support">
                SUPPORT
            </a>
         </li>
@@ -79,7 +79,7 @@
         <button type="button" class="btn btn-success"> Install Steam</button>
         
         <li class="nav-item" style="vertical-align: top">
-            <a href="#" class="nav-link text-white">
+            <a class="nav-link text-white" rounterLinkActive="active" routerLink="/steam-login">
                 login 
             </a>
         </li>	
@@ -100,10 +100,10 @@
                 </li>
             </ul>
         </li>
-        
+       
     </ul>
     </div>
-  
+    
 </nav>
 
 
