--- a/src/app/body/home/home.component.html
+++ b/src/app/body/home/home.component.html
@@ -3,6 +3,7 @@
     <div class="row row-cols-1">
         <app-top-nav-bar>Loading</app-top-nav-bar>
     </div>
+    <router-outlet></router-outlet>
     <div class="row row-cols-3 ms-5">
         <app-gutter>Loading</app-gutter>
         <app-search-nav>Loading</app-search-nav>
@@ -10,6 +11,3 @@
     <app-foot>Loading</app-foot>
 </div>
 
-
-    
-  
