--- a/src/app/headers/top-nav-bar.component.html
+++ b/src/app/headers/top-nav-bar.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar bg-dark">
     
     <div class="center-block">
-        <a class="navbar-brand" href="#" >
+        <a class="navbar-brand" rounterLinkActive="active" routerLink="/Steam-Home">
             <img src ="https://store.akamai.steamstatic.com/public/shared/images/header/logo_steam.svg?t=962016" alt="" width="180" height="50" class="d-inline-block align-text-top">
         </a>
     
