Readjusting app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,24 @@
-<Steam-Home>Loading</Steam-Home>
+
+<div class="containter-fluid ">
+    <app-top-nav-bar>Loading</app-top-nav-bar>
+    <div class="d-flex flex-row">
+    
+   
+    <div class="col-1">
+       
+    </div>
+    <div class="col-2">
+        <app-gutter>Loading</app-gutter>
+    </div>
+    <div class="col-6">
+        <router-outlet></router-outlet>
+       
+    </div>
+    <div class="col-3">
+    
+    </div>
+    </div>
+    <app-foot>Loading</app-foot>
+    
+</div>
 
