background color, sale card and carousel

--- a/src/app/body/home/home.component.html
+++ b/src/app/body/home/home.component.html
@@ -1,7 +1,6 @@
+<app-search-nav>Loading</app-search-nav>
 
-
-        
-        <app-search-nav>Loading</app-search-nav>
-       
-    
-
+<div style="color:white" >FEATURED & RECOMMENDED</div>
+<app-carousels>Loading</app-carousels>
+<div style="color:white">SPECIAL OFFERS</div>
+<app-sale-cards>Loading</app-sale-cards>
